--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ K Means Clustering, Decision Trees, Random Forests, Natural Language Processing,
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>I am Data Science lover, good-news searcher, fervent reader, open-minded traveler and author of <a href="www.pioneeringwomen.org/index.html">pioneeringwomen.org</a>
+								<p>I am Data Science lover, good-news searcher, fervent reader, open-minded traveler and author of <a href="http://www.pioneeringwomen.org/index.html">pioneeringwomen.org</a>
 </p>
 							</article>
 
