--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ K Means Clustering, Decision Trees, Random Forests, Natural Language Processing,
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>This is an Analytic Report of legal gender differentiation around the world. The analysis of data collected in 187 countries, from 2009 to 2018, highlighs the inequity in terms of laws and regulations<br> <a href="https://github.com/mwpnava/thinkful/blob/master/Capstone_1:Analytic_Report_and_Research_Proposal.ipynb">Women Legal Rights in the World</a></p>
 								<p>Using a Linear Regression Algorithm, this project was developed to predict the chance of admission of foreign students to Master's Degree Programs in American Colleges<br><a href="https://github.com/mwpnava/thinkful/blob/master/Linear_regression.ipynb">Predictions of Admissions to Master Degree</a></p>
-								<p>From a dataset with historical sales data for 45 stores located in different regions, this project is an Experimental Design to identified the department which the highest number in lost sales,  execute some actions to reverse those numbers and evaluate the results. <br><a href="https://github.com/mwpnava/thinkful/blob/master/Capstone_2%20-%20Research%20Proposal%20.ipynb">Experimental Design</a></p>
+								<p>From a dataset with historical sales data for 45 stores located in different regions, this project is an Experimental Design to identify the department which the highest number in lost sales,  execute some actions to reverse those numbers and evaluate the results. <br><a href="https://github.com/mwpnava/thinkful/blob/master/Capstone_2%20-%20Research%20Proposal%20.ipynb">Experimental Design</a></p>
 							</article>
 
 
