--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>As a Data Scientist, these are the main activities that I love doing every day: Using Python as my favorite programming language; implementing Machine Learning Algorithms with SciKit Learn (Linear Regression,K Nearest Neighbors,
+								<p> Hello there! Welcome to my portfolio website. <BR> 
+As a Data Scientist, these are the main activities that I love doing every day: Using Python as my favorite programming language; implementing Machine Learning Algorithms with SciKit Learn (Linear Regression,K Nearest Neighbors,
 K Means Clustering, Decision Trees, Random Forests, Natural Language Processing,Neural Nets and Deep Learning and Support Vector Machines) ; using Pandas for Data Analysis; using NumPy for Numerical Data;
 									running SQL queries; using Python for Web Scrapping; using matplotlib and seaborn for data visualizations; developing Projects to challenge myself everyday.<Br> Check out my <a href="#work">work</a>.</p>
 
@@ -66,7 +67,8 @@ K Means Clustering, Decision Trees, Random Forests, Natural Language Processing,
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>I am Data Science lover, good-news searcher, fervent reader, open-minded traveler and author of <a href="http://www.pioneeringwomen.org/index.html">pioneeringwomen.org</a>
+								<p>My name is Wendy.  I am a Computer Science Engineer and I really enjoy working with data of all types and from different domains.<p> 
+								     I am also a good-news searcher, fervent reader, open-minded traveler and author of <a href="http://www.pioneeringwomen.org/index.html">pioneeringwomen.org</a>
 </p>
 							</article>
 
