--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p> Hello there! Welcome to my portfolio website. <BR> 
+								<p> Hello there! Welcome to my portfolio website. <p> 
 As a Data Scientist, these are the main activities that I love doing every day: Using Python as my favorite programming language; implementing Machine Learning Algorithms with SciKit Learn (Linear Regression,K Nearest Neighbors,
 K Means Clustering, Decision Trees, Random Forests, Natural Language Processing,Neural Nets and Deep Learning and Support Vector Machines) ; using Pandas for Data Analysis; using NumPy for Numerical Data;
-									running SQL queries; using Python for Web Scrapping; using matplotlib and seaborn for data visualizations; developing Projects to challenge myself everyday.<Br> Check out my <a href="#work">work</a>.</p>
+									running SQL queries; using Python for Web Scrapping; using matplotlib and seaborn for data visualizations; developing Projects to challenge myself everyday.<P> Check out my <a href="#work">work</a>.</p>
 
 							</article>
 
@@ -68,7 +68,7 @@ K Means Clustering, Decision Trees, Random Forests, Natural Language Processing,
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>My name is Wendy.  I am a Computer Science Engineer and I really enjoy working with data of all types and from different domains.<p> 
-								     I am also a good-news searcher, fervent reader, open-minded traveler and author of <a href="http://www.pioneeringwomen.org/index.html">pioneeringwomen.org</a>
+								     I am also a good-news searcher, a fervent reader, an open-minded traveler and author of <a href="http://www.pioneeringwomen.org/index.html">pioneeringwomen.org</a>
 </p>
 							</article>
 
