--- a/index.html
+++ b/index.html
@@ -67,9 +67,16 @@ K Means Clustering, Decision Trees, Random Forests, Natural Language Processing,
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>My name is Wendy.  I am a Computer Science Engineer and I really enjoy working with data of all types and from different domains.<p> 
-								     I am also a good-news searcher, a fervent reader, an open-minded traveler and author of <a href="http://www.pioneeringwomen.org/index.html">pioneeringwomen.org</a>
-</p>
+								<p>
+								My name is Wendy Navarrete and I am Data Scientist. I was born in Mexico City and lived the last 8 years in USA. My previous jobs, at Walmart Labs gave me the experience to extract, analyze, transform and visualize huge amounts of data.</p>
+<P>
+Nowadays I am working in projects that contribute to increase my knowledge and experience of Python coding, Machine Learning algorithms, Statistical Analysis, Data Visualization and SQL querying.</p>
+<P>
+I am also a good-news searcher, a fervent reader, an open-minded traveler and author of <a href="https://mujerespioneras.org/pioneeringwomen/">pioneeringwomen.org</a>
+ a website to recollect in one place the achievements of women who have started new journey throughout history.
+<P>
+If you would like to know more about me or if you would like to contact me, please use any of the links in <a href="#contact">Contact section</a>.
+
 							</article>
 
 						<!-- Contact -->
@@ -80,6 +87,8 @@ K Means Clustering, Decision Trees, Random Forests, Natural Language Processing,
 
 									<li><a href="https://www.linkedin.com/in/wendy-navarrete-escobedo/" class="icon fa-linkedin"><span class="label">fa-linkedin</span></a></li>
 									<li><a href="https://github.com/mwpnava" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><mailto:"navarrete.wen@gmail.com" target="_blank"class="icon fa-email"><span class="label">email</span></a></li>
+									
 								</ul>
 							</article>
 
