--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p> Hello there! Welcome to my portfolio website. <p> 
+								<p> Hello there! Welcome to my portfolio website. <p>
 As a Data Scientist, these are the main activities that I love doing every day: Using Python as my favorite programming language; implementing Machine Learning Algorithms with SciKit Learn (Linear Regression,K Nearest Neighbors,
 K Means Clustering, Decision Trees, Random Forests, Natural Language Processing,Neural Nets and Deep Learning and Support Vector Machines) ; using Pandas for Data Analysis; using NumPy for Numerical Data;
 									running SQL queries; using Python for Web Scrapping; using matplotlib and seaborn for data visualizations; developing Projects to challenge myself everyday.<P> Check out my <a href="#work">work</a>.</p>
@@ -69,14 +69,23 @@ K Means Clustering, Decision Trees, Random Forests, Natural Language Processing,
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>
 								My name is Wendy Navarrete and I am Data Scientist. I was born in Mexico City and lived the last 8 years in USA. My previous jobs, at Walmart Labs gave me the experience to extract, analyze, transform and visualize huge amounts of data.</p>
-<P>
-Nowadays I am working in projects that contribute to increase my knowledge and experience of Python coding, Machine Learning algorithms, Statistical Analysis, Data Visualization and SQL querying.</p>
-<P>
-I am also a good-news searcher, a fervent reader, an open-minded traveler and author of <a href="https://mujerespioneras.org/pioneeringwomen/">pioneeringwomen.org</a>
- a website to recollect in one place the achievements of women who have started new journey throughout history.
-<P>
-If you would like to know more about me or if you would like to contact me, please use any of the links in <a href="#contact">Contact section</a>.
+									<P>
+									Nowadays I am working in projects that contribute to increase my knowledge and experience of Python coding, Machine Learning algorithms, Statistical Analysis, Data Visualization and SQL querying.</p>
+									<P>
+									I am also a good-news searcher, a fervent reader, an open-minded traveler and author of <a href="https://mujerespioneras.org/pioneeringwomen/" target="_blank">pioneeringwomen.org</a>
+									 a website to recollect in one place the achievements of women who have started new journey throughout history.
+									<P>
+									If you would like to know more about me or if you would like to contact me, please use any of the links below:
+									</p>
+									<center>
+										<ul class="icons">
 
+											<li><a href="https://www.linkedin.com/in/wendy-navarrete-escobedo/" class="icon fa-linkedin"><span class="label">fa-linkedin</span></a></li>
+											<li><a href="https://github.com/mwpnava" class="icon fa-github"><span class="label">GitHub</span></a></li>
+											<li><a href="mailto:navarrete.wen@gmail.com" target="_blank" class="icon fa-envelope"><span class="label">email</span></a></li>
+
+										</ul>
+									</center>
 							</article>
 
 						<!-- Contact -->
@@ -87,8 +96,8 @@ If you would like to know more about me or if you would like to contact me, plea
 
 									<li><a href="https://www.linkedin.com/in/wendy-navarrete-escobedo/" class="icon fa-linkedin"><span class="label">fa-linkedin</span></a></li>
 									<li><a href="https://github.com/mwpnava" class="icon fa-github"><span class="label">GitHub</span></a></li>
-									<li><mailto:"navarrete.wen@gmail.com" target="_blank"class="icon fa-email"><span class="label">email</span></a></li>
-									
+									<li><a href="mailto:navarrete.wen@gmail.com" target="_blank" class="icon fa-envelope"><span class="label">email</span></a></li>
+
 								</ul>
 							</article>
 
