--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 								<p> Hello there! Welcome to my portfolio website. <p>
 As a Data Scientist, these are the main activities that I love doing every day: Using Python as my favorite programming language; implementing Machine Learning Algorithms with SciKit Learn (Linear Regression,K Nearest Neighbors,
 K Means Clustering, Decision Trees, Random Forests, Natural Language Processing,Neural Nets and Deep Learning and Support Vector Machines) ; using Pandas for Data Analysis; using NumPy for Numerical Data;
-									running SQL queries; using Python for Web Scrapping; using matplotlib and seaborn for data visualizations; developing Projects to challenge myself everyday.<P> Check out my <a href="#work">work</a>.</p>
+									running SQL queries; using Python for Web Scrapping; using matplotlib and seaborn for data visualizations; developing Projects
+									 to challenge myself everyday.<P><b><a href="#work"> Check out here my work</a>.</b></p>
 
 							</article>
 
@@ -57,9 +58,54 @@ K Means Clustering, Decision Trees, Random Forests, Natural Language Processing,
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>This is an Analytic Report of legal gender differentiation around the world. The analysis of data collected in 187 countries, from 2009 to 2018, highlighs the inequity in terms of laws and regulations<br> <a href="https://github.com/mwpnava/thinkful/blob/master/Capstone_1:Analytic_Report_and_Research_Proposal.ipynb">Women Legal Rights in the World</a></p>
-								<p>Using a Linear Regression Algorithm, this project was developed to predict the chance of admission of foreign students to Master's Degree Programs in American Colleges<br><a href="https://github.com/mwpnava/thinkful/blob/master/Linear_regression.ipynb">Predictions of Admissions to Master Degree</a></p>
-								<p>From a dataset with historical sales data for 45 stores located in different regions, this project is an Experimental Design to identify the department which the highest number in lost sales,  execute some actions to reverse those numbers and evaluate the results. <br><a href="https://github.com/mwpnava/thinkful/blob/master/Capstone_2%20-%20Research%20Proposal%20.ipynb">Experimental Design</a></p>
+								 <p>
+									 <a href="https://github.com/mwpnava/Data-Science-Projects/tree/master/Popularity_prediction">
+									  <b>Online News Popularity Prediction</b>
+								  </a>
+								  <br>
+									This is a Supervised Learning Project which objective is to predict the popularity of articles published by Mashable website. The machine learning algorithms
+									used for this project were: Random Forest, Support Vector Classification and KNN /  K-Nearest Neighbor
+								 </p>
+                 <p>
+									 <a href='https://github.com/mwpnava/Data-Science-Projects/tree/master/BookRecommender_prediction'>
+										 <b>Book Recommender</b>
+									 </a>
+									 <br>
+									 The book recommender has been a good experience to explore Neural Networks. Two approaches were used to
+									 create this project, the first one was Matrix Factorization (using Keras) and Restricted Boltzmann Machines (using TensorFlow)
+								 </p>
+								 <p>
+									 <a href='https://github.com/mwpnava/Data-Science-Projects/tree/master/ShopperSegments_prediction'>
+										 <b>Shopper Segmentation</b>
+									 </a>
+									 <br>
+									    The objective of this project is to segment shoppers from a dataset given. K-Means, Agglomerative and DBSCAN are the three different
+											unsupervised machine learning algorithms used for the project. At the end of the notebook, you can find the evaluation of those models
+											comparing metrics as ARS (Adjusted Rand Score), NMI (Normalized Mutual Information) and Average Score.
+
+								 </p>
+
+
+								 <p>
+									<a href="https://github.com/mwpnava/thinkful/blob/master/Capstone_1:Analytic_Report_and_Research_Proposal.ipynb">
+										<b>Women Legal Rights in the World</b>
+									</a>
+									<br>
+									This is an Analytic Report of legal gender differentiation around the world.
+									The analysis of data collected in 187 countries, from 2009 to 2018, highlights the inequity in terms of laws and regulations
+								</p>
+								<p>
+									<a href="https://github.com/mwpnava/thinkful/blob/master/Linear_regression.ipynb"><b>Predictions of Admissions to Master's Degree</b></a>
+									<br>
+									Using a Linear Regression Algorithm, this project was developed to predict the chance of admission of foreign students to Master's
+									Degree Programs in American Colleges
+								</p>
+								<p>
+									<a href="https://github.com/mwpnava/thinkful/blob/master/Capstone_2%20-%20Research%20Proposal%20.ipynb"><b>Experimental Design</b></a>
+									<br>
+									From a dataset with historical sales data for 45 stores located in different regions, this project is an Experimental Design
+									to identify the department which the highest number in lost sales,  execute some actions to reverse those numbers and evaluate
+									the results. </p>
 							</article>
 
 
